Fix c-menu positioning and z-index issues

--- a/src/components/c-menu/c-menu.scss
+++ b/src/components/c-menu/c-menu.scss
@@ -134,7 +134,7 @@
   .c-menu-wrapper {
     position: relative;
     padding-left: 14px;
-    z-index: 2;
+    z-index: 1;
   }
 
   .c-menu-wrapper:hover {
